# mcp-flight-search-server

./: .env  README.md  pyproject.toml
src/mcp_flight_search/: __init__.py
