[project]
name = "mcp-flight-search"
version = "0.1.0"
description = "Flight search service implementing  Model Context Protocol (MCP) tools"
readme = "README.md"
authors = [
    { name = "KVSSetty", email = "kvssetty@gmail.com" }
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "google-search-results>=2.4.2",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.2",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
]

[project.scripts]
mcp-flight-search = "mcp_flight_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
